--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} 
+{% load thumbnail %}
 {% block title %} Пост {{ post.text|truncatechars:30 }}  {% endblock %}  
 {% block content %}   
   <div class="row">
@@ -29,6 +30,9 @@
       </ul>
     </aside>
     <article class="col-12 col-md-9">
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
       <p>
         {{ post.text|linebreaksbr }}
       </p>
@@ -39,6 +43,7 @@
           </a>
         </div>
       {% endif %}
+      {% include 'includes/comment.html' %}
     </article>
   </div> 
 {% endblock %}  
