--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}  Профайл пользователя {{ author.get_full_name }} {% endblock %}  
 {% block content %}    
   <h1>Все посты пользователя {{ author.get_full_name }} </h1>
