--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -17,13 +17,13 @@
           </li>
         {% endif %}
         <li class="list-group-item">
-          Автор: {{ author.get_full_name }}
+          Автор: {{ post.author.get_full_name }}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
           Всего постов автора:  <span > {{ post.author.posts.count }} </span>
         </li>
         <li class="list-group-item">
-          <a href="{% url 'posts:profile' author.username %}">
+          <a href="{% url 'posts:profile' post.author.username %}">
             все посты пользователя
           </a>
         </li>
