--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -2,6 +2,7 @@
 {% load thumbnail %} 
 {% block title %} Последние обновления на сайте {% endblock %}
 {% block content %}  
+  {% include 'posts/includes/switcher.html' %}
   <h1>Последние обновления на сайте</h1>
   {% load cache %}
   {% cache 20 index_page %}
